syntax = "proto2";

package vt;

option java_multiple_files = true;
option java_package = "org.apache.flink.statefun.examples.datastream";

message MapOperatorState {
  repeated int32 vTimestamp = 2;
}